Entity page in UI now correctly displays up to 1000 resources mentioning the entity.

--- a/ks-server-http/src/main/resources/eu/fbk/knowledgestore/server/http/jaxrs/lookup.mustache
+++ b/ks-server-http/src/main/resources/eu/fbk/knowledgestore/server/http/jaxrs/lookup.mustache
@@ -142,7 +142,10 @@ Mention referents: {{{mentionEntityLinks}}}&nbsp;&nbsp;-&nbsp;&nbsp;first one sh
 {{#entityResources}}
 <div class="row">
 <div class="col-md-12">
-<div style="float: left"><strong>Entity occurrences ({{entityResourcesCount}}, max {{maxTriples}})</strong></div>
+<div style="float: left"><strong>
+Entity occurrences ({{entityResourcesCount}}, max {{maxTriples}})
+{{#entityResourcesCut}}&nbsp;&nbsp;(# mentions may be imprecise){{/entityResourcesCut}}
+</strong></div>
 <br/>
 <div class="panel panel-default">
 {{{entityResources}}}
