--- a/src/site/markdown/naf-populator.md.vm
+++ b/src/site/markdown/naf-populator.md.vm
@@ -1,10 +1,6 @@
- -------------
- NAF populator
- -------------
+# NAF populator documentation
 
-NAF populator documentation
-
-+---
+```
 usage: eu.fbk.knowledgestore.populator.naf.nafPopulator [-b <arg>] [-d <arg>]
        [-f <arg>] [-h] [-n <arg>] [-o <arg>] [-p] [-r] [-spi] [-v] [-x <arg>]
 
@@ -32,4 +28,4 @@ Options
                                    then exit.
   -x,--exclude <arg>               Insert the layers in which you won't populate
                                    to the KS. -x <Resource|Entity|Mention>
-+---
+```
