--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -50,6 +50,7 @@ NewsReader components cooperate.
 <h3>Resources</h3>
 
   * The KnowledgeStore [API JavaDoc](${site-root}apidocs/index.html) and [browsable source Code](${site-root}xref/index.html)
+  * Fork the KnowledgeStore through the <a href="https://github.com/dkmfbk/knowledgestore">GitHub page</a>
   * The KnowledgeStore Data Model ontologies:
     * [Fixed Part](${site-root}ontologies/knowledgestore.html)
     * [NewsReader Specialization](${site-root}ontologies/newsreader.html)
@@ -66,9 +67,9 @@ NewsReader components cooperate.
   * [KnowledgeStore instance](http://knowledgestore2.fbk.eu/nwr/wikinews/) using the WikiNews dataset
     (18K news, 2004-2014)
   * Access restricted to NewsReader consortium:
-    * [KnowledgeStore instance](https://knowledgestore.fbk.eu/nwr/cars/) for the global automotive industry use case
+    * [KnowledgeStore instance](https://knowledgestore2.fbk.eu/nwr/cars/) for the global automotive industry use case
       (version 1, 65K news, 2003-2013)
-    * [KnowledgeStore instance](https://knowledgestore.fbk.eu/nwr/worldcup/) for the FIFA World Cup use case (212K news,
+    * [KnowledgeStore instance](https://knowledgestore2.fbk.eu/nwr/worldcup/) for the FIFA World Cup use case (212K news,
       2004-2014)
     * [KnowledgeStore instance](https://knowledgestore2.fbk.eu/nwr/cars/) for the global automotive industry use case
       (version 2, 1.2M news, 2003-2013)
